Compiler-LISP-master — 2/MathLangParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 MathLang.g 2018-01-18 00:23:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MathLang 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class MathLangParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "NULL", "NIL", "QUOTE", "CAR", "CDR", "CONS", "EQUAL", "DEFUN", "ASSIGN", "IF", "BLOCK", "PROGRAM", "WS", "SL_COMMENT", "ML_COMMENT", "ATOM", "WORD", "VARIABLE", "ADD", "SUB", "MUL", "DIV", "GE", "LE", "NEQUALS", "GT", "LT", "EQUALS", "DOT", "'('", "')'", "'()'", "'\"'"
	};
	public const int EOF=-1;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int NULL=4;
	public const int NIL=5;
	public const int QUOTE=6;
	public const int CAR=7;
	public const int CDR=8;
	public const int CONS=9;
	public const int EQUAL=10;
	public const int DEFUN=11;
	public const int ASSIGN=12;
	public const int IF=13;
	public const int BLOCK=14;
	public const int PROGRAM=15;
	public const int WS=16;
	public const int SL_COMMENT=17;
	public const int ML_COMMENT=18;
	public const int ATOM=19;
	public const int WORD=20;
	public const int VARIABLE=21;
	public const int ADD=22;
	public const int SUB=23;
	public const int MUL=24;
	public const int DIV=25;
	public const int GE=26;
	public const int LE=27;
	public const int NEQUALS=28;
	public const int GT=29;
	public const int LT=30;
	public const int EQUALS=31;
	public const int DOT=32;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				true, false, false, true, false, false, false, false, false, true, false, 
				, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public MathLangParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public MathLangParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[79+1];

		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MathLangParser.tokenNames; } }
	public override string GrammarFileName { get { return "MathLang.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class group_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_group();
	partial void Leave_group();

	// $ANTLR start "group"
	// MathLang.g:71:1: group : ( '(' term ')' | ATOM | nil | nil2 | methodExe );
	[GrammarRule("group")]
	private MathLangParser.group_return group()
	{
		Enter_group();
		EnterRule("group", 1);
		TraceIn("group", 1);
		MathLangParser.group_return retval = new MathLangParser.group_return();
		retval.Start = (IToken)input.LT(1);
		int group_StartIndex = input.Index;
		object root_0 = null;

		IToken char_literal1=null;
		IToken char_literal3=null;
		IToken ATOM4=null;
		MathLangParser.term_return term2 = default(MathLangParser.term_return);
		MathLangParser.nil_return nil5 = default(MathLangParser.nil_return);
		MathLangParser.nil2_return nil26 = default(MathLangParser.nil2_return);
		MathLangParser.methodExe_return methodExe7 = default(MathLangParser.methodExe_return);

		object char_literal1_tree=null;
		object char_literal3_tree=null;
		object ATOM4_tree=null;

		try { DebugEnterRule(GrammarFileName, "group");
		DebugLocation(71, 0);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }
			// MathLang.g:71:6: ( '(' term ')' | ATOM | nil | nil2 | methodExe )
			int alt1=5;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			switch (input.LA(1))
			{
			case 33:
				{
				int LA1_1 = input.LA(2);

				if ((LA1_1==WORD))
				{
					int LA1_5 = input.LA(3);

					if ((LA1_5==33))
					{
						alt1=5;
					}
					else if ((LA1_5==34))
					{
						alt1=1;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 1, 5, input);

						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA1_1==NIL||LA1_1==ATOM||(LA1_1>=ADD && LA1_1<=EQUALS)||LA1_1==33||LA1_1==35))
				{
					alt1=1;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 1, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case ATOM:
				{
				alt1=2;
				}
				break;
			case NIL:
				{
				alt1=3;
				}
				break;
			case 35:
				{
				alt1=4;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:72:3: '(' term ')'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(72, 6);
				char_literal1=(IToken)Match(input,33,Follow._33_in_group615); if (state.failed) return retval;
				DebugLocation(72, 8);
				PushFollow(Follow._term_in_group618);
				term2=term();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term2.Tree);
				DebugLocation(72, 16);
				char_literal3=(IToken)Match(input,34,Follow._34_in_group620); if (state.failed) return retval;

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:73:5: ATOM
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(73, 5);
				ATOM4=(IToken)Match(input,ATOM,Follow._ATOM_in_group627); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				ATOM4_tree = (object)adaptor.Create(ATOM4);
				adaptor.AddChild(root_0, ATOM4_tree);
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// MathLang.g:74:5: nil
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(74, 5);
				PushFollow(Follow._nil_in_group633);
				nil5=nil();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, nil5.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// MathLang.g:75:5: nil2
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(75, 5);
				PushFollow(Follow._nil2_in_group639);
				nil26=nil2();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, nil26.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// MathLang.g:76:5: methodExe
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(76, 5);
				PushFollow(Follow._methodExe_in_group645);
				methodExe7=methodExe();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, methodExe7.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("group", 1);
			LeaveRule("group", 1);
			Leave_group();
			if (state.backtracking > 0) { Memoize(input, 1, group_StartIndex); }
		}
		DebugLocation(77, 0);
		} finally { DebugExitRule(GrammarFileName, "group"); }
		return retval;

	}
	// $ANTLR end "group"

	public class mult_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_mult();
	partial void Leave_mult();

	// $ANTLR start "mult"
	// MathLang.g:79:1: mult : ( ( MUL | DIV ) ( group | WORD ) )? ( group | WORD ) ;
	[GrammarRule("mult")]
	private MathLangParser.mult_return mult()
	{
		Enter_mult();
		EnterRule("mult", 2);
		TraceIn("mult", 2);
		MathLangParser.mult_return retval = new MathLangParser.mult_return();
		retval.Start = (IToken)input.LT(1);
		int mult_StartIndex = input.Index;
		object root_0 = null;

		IToken set8=null;
		IToken WORD10=null;
		IToken WORD12=null;
		MathLangParser.group_return group9 = default(MathLangParser.group_return);
		MathLangParser.group_return group11 = default(MathLangParser.group_return);

		object set8_tree=null;
		object WORD10_tree=null;
		object WORD12_tree=null;

		try { DebugEnterRule(GrammarFileName, "mult");
		DebugLocation(79, 56);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }
			// MathLang.g:79:5: ( ( ( MUL | DIV ) ( group | WORD ) )? ( group | WORD ) )
			DebugEnterAlt(1);
			// MathLang.g:79:7: ( ( MUL | DIV ) ( group | WORD ) )? ( group | WORD )
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(79, 7);
			// MathLang.g:79:7: ( ( MUL | DIV ) ( group | WORD ) )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, decisionCanBacktrack[3]);
			int LA3_0 = input.LA(1);

			if (((LA3_0>=MUL && LA3_0<=DIV)))
			{
				alt3=1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:79:8: ( MUL | DIV ) ( group | WORD )
				{
				DebugLocation(79, 8);
				set8=(IToken)input.LT(1);
				set8=(IToken)input.LT(1);
				if ((input.LA(1)>=MUL && input.LA(1)<=DIV))
				{
					input.Consume();
					if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set8), root_0);
					state.errorRecovery=false;state.failed=false;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					MismatchedSetException mse = new MismatchedSetException(null,input);
					DebugRecognitionException(mse);
					throw mse;
				}

				DebugLocation(79, 23);
				// MathLang.g:79:23: ( group | WORD )
				int alt2=2;
				try { DebugEnterSubRule(2);
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==NIL||LA2_0==ATOM||LA2_0==33||LA2_0==35))
				{
					alt2=1;
				}
				else if ((LA2_0==WORD))
				{
					alt2=2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
				} finally { DebugExitDecision(2); }
				switch (alt2)
				{
				case 1:
					DebugEnterAlt(1);
					// MathLang.g:79:24: group
					{
					DebugLocation(79, 24);
					PushFollow(Follow._group_in_mult666);
					group9=group();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group9.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// MathLang.g:79:32: WORD
					{
					DebugLocation(79, 32);
					WORD10=(IToken)Match(input,WORD,Follow._WORD_in_mult670); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					WORD10_tree = (object)adaptor.Create(WORD10);
					adaptor.AddChild(root_0, WORD10_tree);
					}

					}
					break;

				}
				} finally { DebugExitSubRule(2); }


				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(79, 40);
			// MathLang.g:79:40: ( group | WORD )
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_0 = input.LA(1);

			if ((LA4_0==NIL||LA4_0==ATOM||LA4_0==33||LA4_0==35))
			{
				alt4=1;
			}
			else if ((LA4_0==WORD))
			{
				alt4=2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input);

				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:79:41: group
				{
				DebugLocation(79, 41);
				PushFollow(Follow._group_in_mult676);
				group11=group();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group11.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:79:49: WORD
				{
				DebugLocation(79, 49);
				WORD12=(IToken)Match(input,WORD,Follow._WORD_in_mult680); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				WORD12_tree = (object)adaptor.Create(WORD12);
				adaptor.AddChild(root_0, WORD12_tree);
				}

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("mult", 2);
			LeaveRule("mult", 2);
			Leave_mult();
			if (state.backtracking > 0) { Memoize(input, 2, mult_StartIndex); }
		}
		DebugLocation(79, 56);
		} finally { DebugExitRule(GrammarFileName, "mult"); }
		return retval;

	}
	// $ANTLR end "mult"

	public class add_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_add();
	partial void Leave_add();

	// $ANTLR start "add"
	// MathLang.g:80:1: add : ( ( ADD | SUB ) mult )? mult ;
	[GrammarRule("add")]
	private MathLangParser.add_return add()
	{
		Enter_add();
		EnterRule("add", 3);
		TraceIn("add", 3);
		MathLangParser.add_return retval = new MathLangParser.add_return();
		retval.Start = (IToken)input.LT(1);
		int add_StartIndex = input.Index;
		object root_0 = null;

		IToken set13=null;
		MathLangParser.mult_return mult14 = default(MathLangParser.mult_return);
		MathLangParser.mult_return mult15 = default(MathLangParser.mult_return);

		object set13_tree=null;

		try { DebugEnterRule(GrammarFileName, "add");
		DebugLocation(80, 38);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }
			// MathLang.g:80:4: ( ( ( ADD | SUB ) mult )? mult )
			DebugEnterAlt(1);
			// MathLang.g:80:7: ( ( ADD | SUB ) mult )? mult
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(80, 7);
			// MathLang.g:80:7: ( ( ADD | SUB ) mult )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, decisionCanBacktrack[5]);
			int LA5_0 = input.LA(1);

			if (((LA5_0>=ADD && LA5_0<=SUB)))
			{
				alt5=1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:80:8: ( ADD | SUB ) mult
				{
				DebugLocation(80, 8);
				set13=(IToken)input.LT(1);
				set13=(IToken)input.LT(1);
				if ((input.LA(1)>=ADD && input.LA(1)<=SUB))
				{
					input.Consume();
					if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set13), root_0);
					state.errorRecovery=false;state.failed=false;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					MismatchedSetException mse = new MismatchedSetException(null,input);
					DebugRecognitionException(mse);
					throw mse;
				}

				DebugLocation(80, 23);
				PushFollow(Follow._mult_in_add703);
				mult14=mult();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult14.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(80, 30);
			PushFollow(Follow._mult_in_add707);
			mult15=mult();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult15.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("add", 3);
			LeaveRule("add", 3);
			Leave_add();
			if (state.backtracking > 0) { Memoize(input, 3, add_StartIndex); }
		}
		DebugLocation(80, 38);
		} finally { DebugExitRule(GrammarFileName, "add"); }
		return retval;

	}
	// $ANTLR end "add"

	public class compare_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_compare();
	partial void Leave_compare();

	// $ANTLR start "compare"
	// MathLang.g:81:1: compare : ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )? add ;
	[GrammarRule("compare")]
	private MathLangParser.compare_return compare()
	{
		Enter_compare();
		EnterRule("compare", 4);
		TraceIn("compare", 4);
		MathLangParser.compare_return retval = new MathLangParser.compare_return();
		retval.Start = (IToken)input.LT(1);
		int compare_StartIndex = input.Index;
		object root_0 = null;

		IToken set16=null;
		MathLangParser.add_return add17 = default(MathLangParser.add_return);
		MathLangParser.add_return add18 = default(MathLangParser.add_return);

		object set16_tree=null;

		try { DebugEnterRule(GrammarFileName, "compare");
		DebugLocation(81, 64);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return retval; }
			// MathLang.g:81:8: ( ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )? add )
			DebugEnterAlt(1);
			// MathLang.g:81:12: ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )? add
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(81, 12);
			// MathLang.g:81:12: ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_0 = input.LA(1);

			if (((LA6_0>=GE && LA6_0<=EQUALS)))
			{
				alt6=1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:81:13: ( GE | LE | NEQUALS | EQUALS | GT | LT ) add
				{
				DebugLocation(81, 13);
				set16=(IToken)input.LT(1);
				set16=(IToken)input.LT(1);
				if ((input.LA(1)>=GE && input.LA(1)<=EQUALS))
				{
					input.Consume();
					if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set16), root_0);
					state.errorRecovery=false;state.failed=false;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					MismatchedSetException mse = new MismatchedSetException(null,input);
					DebugRecognitionException(mse);
					throw mse;
				}

				DebugLocation(81, 54);
				PushFollow(Follow._add_in_compare747);
				add17=add();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add17.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(81, 60);
			PushFollow(Follow._add_in_compare751);
			add18=add();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add18.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("compare", 4);
			LeaveRule("compare", 4);
			Leave_compare();
			if (state.backtracking > 0) { Memoize(input, 4, compare_StartIndex); }
		}
		DebugLocation(81, 64);
		} finally { DebugExitRule(GrammarFileName, "compare"); }
		return retval;

	}
	// $ANTLR end "compare"

	public class term_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_term();
	partial void Leave_term();

	// $ANTLR start "term"
	// MathLang.g:82:1: term : compare ;
	[GrammarRule("term")]
	private MathLangParser.term_return term()
	{
		Enter_term();
		EnterRule("term", 5);
		TraceIn("term", 5);
		MathLangParser.term_return retval = new MathLangParser.term_return();
		retval.Start = (IToken)input.LT(1);
		int term_StartIndex = input.Index;
		object root_0 = null;

		MathLangParser.compare_return compare19 = default(MathLangParser.compare_return);


		try { DebugEnterRule(GrammarFileName, "term");
		DebugLocation(82, 15);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return retval; }
			// MathLang.g:82:5: ( compare )
			DebugEnterAlt(1);
			// MathLang.g:82:7: compare
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(82, 7);
			PushFollow(Follow._compare_in_term759);
			compare19=compare();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, compare19.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("term", 5);
			LeaveRule("term", 5);
			Leave_term();
			if (state.backtracking > 0) { Memoize(input, 5, term_StartIndex); }
		}
		DebugLocation(82, 15);
		} finally { DebugExitRule(GrammarFileName, "term"); }
		return retval;

	}
	// $ANTLR end "term"

	public class dotPair_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_dotPair();
	partial void Leave_dotPair();

	// $ANTLR start "dotPair"
	// MathLang.g:84:1: dotPair : '(' ( ATOM | dotPair | NIL ) DOT ( ATOM | dotPair | NIL ) ')' ;
	[GrammarRule("dotPair")]
	private MathLangParser.dotPair_return dotPair()
	{
		Enter_dotPair();
		EnterRule("dotPair", 6);
		TraceIn("dotPair", 6);
		MathLangParser.dotPair_return retval = new MathLangParser.dotPair_return();
		retval.Start = (IToken)input.LT(1);
		int dotPair_StartIndex = input.Index;
		object root_0 = null;

		IToken char_literal20=null;
		IToken ATOM21=null;
		IToken NIL23=null;
		IToken DOT24=null;
		IToken ATOM25=null;
		IToken NIL27=null;
		IToken char_literal28=null;
		MathLangParser.dotPair_return dotPair22 = default(MathLangParser.dotPair_return);
		MathLangParser.dotPair_return dotPair26 = default(MathLangParser.dotPair_return);

		object char_literal20_tree=null;
		object ATOM21_tree=null;
		object NIL23_tree=null;
		object DOT24_tree=null;
		object ATOM25_tree=null;
		object NIL27_tree=null;
		object char_literal28_tree=null;

		try { DebugEnterRule(GrammarFileName, "dotPair");
		DebugLocation(84, 73);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 6)) { return retval; }
			// MathLang.g:84:9: ( '(' ( ATOM | dotPair | NIL ) DOT ( ATOM | dotPair | NIL ) ')' )
			DebugEnterAlt(1);
			// MathLang.g:84:11: '(' ( ATOM | dotPair | NIL ) DOT ( ATOM | dotPair | NIL ) ')'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(84, 14);
			char_literal20=(IToken)Match(input,33,Follow._33_in_dotPair769); if (state.failed) return retval;
			DebugLocation(84, 16);
			// MathLang.g:84:16: ( ATOM | dotPair | NIL )
			int alt7=3;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, decisionCanBacktrack[7]);
			switch (input.LA(1))
			{
			case ATOM:
				{
				alt7=1;
				}
				break;
			case 33:
				{
				alt7=2;
				}
				break;
			case NIL:
				{
				alt7=3;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:84:17: ATOM
				{
				DebugLocation(84, 17);
				ATOM21=(IToken)Match(input,ATOM,Follow._ATOM_in_dotPair773); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				ATOM21_tree = (object)adaptor.Create(ATOM21);
				adaptor.AddChild(root_0, ATOM21_tree);
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:84:24: dotPair
				{
				DebugLocation(84, 24);
				PushFollow(Follow._dotPair_in_dotPair777);
				dotPair22=dotPair();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, dotPair22.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// MathLang.g:84:34: NIL
				{
				DebugLocation(84, 34);
				NIL23=(IToken)Match(input,NIL,Follow._NIL_in_dotPair781); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				NIL23_tree = (object)adaptor.Create(NIL23);
				adaptor.AddChild(root_0, NIL23_tree);
				}

				}
				break;

			}
			} finally { DebugExitSubRule(7); }
